--- a/app/views/chat.scala.html
+++ b/app/views/chat.scala.html
@@ -4,7 +4,7 @@
     <h2>Room: @roomId | User: @userId</h2>
     <div style = "display: flex; gap: 20px;">
         <div style = "flex: 2;">
-            <div id="ChatBox"></div>
+            <div id="chatBox"></div>
             <div id="SendChatMessagePrompt">
                 <label for="chatInput">Enter Message:</label>
                 <input id="chatInput" type="text" placeholder="Type a Message ..."/>
